add test layout

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -12,5 +12,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
-
+    
+    <FrameLayout
+        android:id="@+id/moireContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+	    <ImageView
+	        android:id="@+id/moireImage"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:contentDescription="main moire image" />
+    </FrameLayout>
+    
 </RelativeLayout>
